[fix] #88 #89 Collectors.toList() -> .toList()